Add tests for AddPictureCommandParser